<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string-array name="menu_array">
        <item>Menu 1</item>
        <item>Menu 2</item>
        <item>Menu 3</item>
        <item>Menu 4</item>
    </string-array>

    <string name="app_name">课程Plus</string>
    <string name="action_settings">Settings</string>
    <string name="action_personal">个人中心</string>
    <string name="hello_world">Hello world!</string>
    <string name="courseName">课程名字</string>
    <string name="teacherName">教师名字</string>
    <string name="desc_course1Img">课程1图片</string>
    <string name="text_course1Summarize">课程概述</string>
    <string name="text_course1SummarizeIfm">课程概述信息</string>
    <string name="text_course1AchieAsse">授课方式</string>
    <string name="text_course1AchieAsseIfm">授课方式信息</string>
    <string name="text_course1TimePlace">上课时间地点</string>
    <string name="text_course1TimePlaceIfm">上课时间地点信息</string>
    <string name="all_courses">全部课程</string>  
    <string name="all_collections">我的收藏</string>   
    <string name="collection">收         藏</string> 
    <string name="login">登陆</string>
    <string name="register">注册</string>
    <string name="search">搜索</string>
    <string name="email_address">E-mail</string>
    <string name="account">Account</string>
    <string name="set_password">Set password</string>
    <string name="set_user">Set user</string>
    <string name="input_password">Input password</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="confirm_password">Confirm your password</string>
    <string name="course_name">课程名字</string>
</resources>