<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" 
    android:background="@drawable/psbe2">

  <TextView
      android:id="@+id/forget_View"
      android:layout_width="150dp"
      android:layout_height="30dp"
      android:layout_below="@+id/loginPanel"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="22dp"
      android:text="@string/forgot_password"
      android:textColor="#6fec727d" />

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_alignParentBottom="true"
      android:layout_alignParentLeft="true"
      android:orientation="horizontal" >

      <Button
          android:id="@+id/LoginBtn"
          android:layout_width="150dp"
          android:layout_height="50dp"
          android:layout_weight="1"
          android:layout_marginTop="18dp"
          android:background="#7191a8"
          android:text="@string/login"
          android:textColor="#ffffff" />

      <Button
          android:id="@+id/Register_Btn"
          android:layout_width="150dp"
          android:layout_height="50dp"
          android:layout_weight="1"
          android:layout_marginTop="18dp"
          android:background="#e17191a8"
          android:text="@string/register"
          android:textColor="#ffffff" />
  </LinearLayout>

  <LinearLayout
      android:id="@+id/loginPanel"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_alignParentLeft="true"
      android:layout_alignParentTop="true"
      android:layout_marginTop="132dp"
      android:orientation="vertical" >

      <EditText
          android:id="@+id/accountEt_login"
          android:layout_width="250dp"
          android:layout_height="40dp"
          android:layout_gravity="center"
          android:layout_marginLeft="50dp"
          android:layout_marginRight="50dp"
          android:layout_marginTop="15dp"
          android:ems="10"
          android:hint="@string/email_address"
          android:singleLine="true"
          android:textColorHint="#afbababa" 
          android:background="@drawable/shape">

          <requestFocus />
      </EditText>

      <EditText
          android:id="@+id/pwdEt_login"
          android:layout_width="250dp"
          android:layout_height="40dp"
          android:layout_gravity="center"
          android:layout_marginLeft="50dp"
          android:layout_marginRight="50dp"
          android:layout_marginTop="15dp"
          android:ems="10"
          android:hint="@string/input_password"
          android:password="true"
          android:singleLine="true"
          android:textColorHint="#afbababa" 
          android:background="@drawable/shape"/>
  </LinearLayout>
            
</RelativeLayout>